--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
     <application
         android:name=".BentalaApplication"
         android:allowBackup="true"
@@ -13,11 +17,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BentalaTumblr"
         tools:targetApi="31">
+
+        <receiver android:name=".foundation.receiver.AlarmReceiver" android:enabled="true" />
+        <receiver android:name=".foundation.receiver.BootCompletedReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.permission.action.BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.BentalaTumblr">
+            android:windowSoftInputMode="adjustResize"
+            android:theme="@style/Theme.BentalaTumblr.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
