--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 agp = "8.10.0"
 vicoCompose = "2.1.3"
+composeLottie = "6.6.7"
 composeAnimation = "1.8.3"
 composeUI = "1.8.3"
 constraintlayoutCompose = "1.1.1"
@@ -18,13 +19,14 @@ espressoCore = "3.6.1"
 kotlinxCoroutinesAndroid = "1.10.2"
 kotlinxCoroutinesCore = "1.10.2"
 kotlinxMetadataJvm = "0.9.0"
-kotlinxSerializationJson = "1.8.1"
+kotlinxSerializationJson = "1.9.0"
+kotlinxImmutableCollections = "0.4.0"
 lifecycleExtensions = "2.2.0"
-lifecycleRuntimeKtx = "2.9.1"
+lifecycleRuntimeKtx = "2.9.2"
 activityCompose = "1.10.1"
-composeBom = "2025.06.01"
+composeBom = "2025.07.00"
 lifecycleViewmodelKtx = "2.9.1"
-navigationCompose = "2.9.0"
+navigationCompose = "2.9.2"
 roomRuntime = "2.7.2"
 timber = "5.0.1"
 wireRuntime = "5.3.3"
@@ -77,10 +79,12 @@ androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-material-icons = { group = "androidx.compose.material", name = "material-icons-extended", version = "1.7.8" }
 
+kotlinx-immutable-collections = { module = "org.jetbrains.kotlinx:kotlinx-collections-immutable", version.ref = "kotlinxImmutableCollections" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinxCoroutinesAndroid" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinxCoroutinesCore" }
 kotlinx-metadata-jvm = { module = "org.jetbrains.kotlinx:kotlinx-metadata-jvm", version.ref = "kotlinxMetadataJvm" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
+airbnb-lottie-compose = { module = "com.airbnb.android:lottie-compose", version.ref = "composeLottie" }
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
 wire-runtime = { module = "com.squareup.wire:wire-runtime", version.ref = "wireRuntime" }
 
